# codex-multi-agents-loop

./: .env.example  .gitignore  .mcp.json  README.en.md  README.md  codex-delivery-workflow.config.json  codex-multi-agents-loop.config.json  delivery-workflow.config.json  hooks.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude/: hooks.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: delivery-workflow.md
.codex-plugin/: mcp.json  plugin.json
agents/: backend-impl.toml  delivery-manager.toml  development-engineer.toml  frontend-impl.toml  product-manager.toml  project-manager.toml  qa-engineer.toml  qa-tester.toml  software-architect.toml  ui-designer.toml
agents_workflow/: __init__.py  capabilities.py  cli.py  config.py  engine.py  mcp_server.py  paths.py  storage.py  workflow_log.py
delivery_workflow/: __init__.py  capabilities.py  cli.py  config.py  definitions.py  engine.py  host_hooks.py  lark.py  lark_daemon.py  lark_e2e.py  lark_events.py  lark_sdk.py  mcp_server.py  paths.py  platforms.py  storage.py  worker_daemon.py  workflow.yaml  workflow_log.py
delivery_workflow/references/: 00-agent-registry.md  01-requirement-intake.md  02-prd-v1.md  03-multi-role-review.md  04-review-summary.md  05-prd-approval.md  06-ui-design-spec.md  10-tech-review.md  (+21 more)
scripts/: codex-deliveryflow  codex-multi-agents-loop  codex-multi-agents-loop-mcp  deliveryflow  deliveryflow-host-lark  deliveryflow-mcp  lark-e2e-smoke  upgrade-version.py
tests/: test_core.py
workflow/: codex-delivery-workflow.toml  codex-multi-agents-loop.toml
(+15 files in other folders)
