[project]
name = "delivery-workflow"
version = "0.1.0"
description = "Platform-neutral software delivery workflow worker"
requires-python = ">=3.10"
dependencies = [
  "lark-oapi>=1.4.18",
]

[project.scripts]
deliveryflow = "delivery_workflow.cli:main"

[tool.setuptools.package-data]
delivery_workflow = ["workflow.yaml", "references/*.md"]
