[project]
name = "delivery-workflow"
version = "0.1.11"
description = "Platform-neutral software delivery workflow worker"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
deliveryflow = "delivery_workflow.cli:main"

[tool.setuptools.package-data]
delivery_workflow = ["workflow.yaml", "references/*.md"]
